--- a/filmoplaner_prototype/CanvasManifest.json
+++ b/filmoplaner_prototype/CanvasManifest.json
@@ -133,8 +133,8 @@
     "CreateMenu",
     "Dodaj pracownika",
     "Dodaj gatunek",
-    "Nowe spotkanie",
-    "Nowe zadanie",
+    "Dodaj spotkanie",
+    "Dodaj zadanie",
     "Dodaj menadzera",
     "Dodaj lokalizacje",
     "Dodaj film"
