--- a/filmoplaner_prototype/Src/Dodaj lokalizacje.fx.yaml
+++ b/filmoplaner_prototype/Src/Dodaj lokalizacje.fx.yaml
@@ -1,4 +1,5 @@
 "'Dodaj lokalizacje' As screen.'phoneLayout_HeaderAndForm_ver3.0'":
+    Fill: =RGBA(204, 231, 246, 1)
 
     IconCancel7 As icon.Cancel:
         AccessibleLabel: =Self.Tooltip
@@ -13,8 +14,8 @@
         Width: =88
         ZIndex: =1
 
-    RectQuickActionBar10 As rectangle:
-        Height: =88
+    RectQuickActionBar5_31 As rectangle:
+        Height: =106
         Width: =Parent.Width
         ZIndex: =2
 
@@ -30,24 +31,26 @@
         TabIndex: =0
         Tooltip: ="Prześlij element"
         Width: =88
-        X: =476
+        X: =464
+        Y: =9
         ZIndex: =3
 
     LblAppName10 As label:
-        Height: =88
-        Size: =27
-        Text: ="Dodaj lokalizacje"
-        Width: =388
+        Align: =Align.Center
+        FontWeight: =FontWeight.Semibold
+        Height: =106
+        Size: =30
+        Text: ="Dodaj lokalizację"
+        Width: =464
         Wrap: =false
-        X: =IconCancel7.X + IconCancel7.Width
         ZIndex: =4
 
     EditForm7 As form:
         DataSource: =Lokalizacja
-        Height: =Parent.Height - EditForm7.Y
+        Height: =1030
         Item: =Defaults(Lokalizacja)
         Width: =Parent.Width
-        Y: =RectQuickActionBar10.Height
+        Y: =106
         ZIndex: =5
 
         Lokalizacja_DataCard2 As typedDataCard.textualEditCard:
@@ -129,6 +132,6 @@
         OnSelect: =Back()
         Width: =88
         X: =552
-        Y: =8
+        Y: =17
         ZIndex: =6
 
