--- a/filmoplaner_prototype/Src/EdytujZadanie.fx.yaml
+++ b/filmoplaner_prototype/Src/EdytujZadanie.fx.yaml
@@ -291,10 +291,10 @@
                 DisplayFields: =["Value"]
                 DisplayMode: =Parent.DisplayMode
                 Height: =70
-                Items: =Choices([@Zadanie].Mened_x017c_er)
+                Items: =Choices([@Zadanie].Menedżer)
                 PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
                 SearchFields: =["Value"]
-                SearchItems: =Choices(Zadanie.Mened_x017c_er,DataCardValue83.SearchText)
+                SearchItems: =Choices(Zadanie.Menedżer,DataCardValue83.SearchText)
                 SelectMultiple: =false
                 Size: =21
                 Tooltip: =Parent.DisplayName
