--- a/filmoplaner_prototype/CanvasManifest.json
+++ b/filmoplaner_prototype/CanvasManifest.json
@@ -113,11 +113,17 @@
     "Pracownicy_wyswietl",
     "Pracownicy_usun",
     "Gatunki_wyswietl",
+    "Gatunki_usun",
     "Spotkania_wyswietl",
+    "Spotkania_usun",
     "Zadania_wyswietl",
+    "Zadania_usun",
     "Menedzerowie_wyswietl",
+    "Menedzerowie_usun",
     "Lokalizacje_wyswietl",
+    "Lokalizacje_usun",
     "Filmy_wyswietl",
+    "Filmy_usun",
     "Pracownicy_wyswietl_szczegoly",
     "Spotkania_wyswietl_szczegoly",
     "Zadania_wyswietl_szczegoly",
