--- a/filmoplaner_prototype/Src/Filmy_wyswietl.fx.yaml
+++ b/filmoplaner_prototype/Src/Filmy_wyswietl.fx.yaml
@@ -8,7 +8,7 @@
 
     "BrowseGallery1_6 As gallery.'BrowseLayout_Vertical_OneTextVariant_ver4.0'":
         Height: =Parent.Height - BrowseGallery1_6.Y
-        Items: =Film_1
+        Items: =If(SortDescending1,Sort(Film_1,'Nazwa (Title)',Descending),(If(!SortDescending1,Sort(Film_1,'Nazwa (Title)',Ascending))))
         Layout: =Layout.Vertical
         ShowScrollbar: =false
         TemplatePadding: =0
