--- a/filmoplaner_prototype/Src/Menedzerowie_wyswietl.fx.yaml
+++ b/filmoplaner_prototype/Src/Menedzerowie_wyswietl.fx.yaml
@@ -8,7 +8,7 @@
 
     "BrowseGallery1_4 As gallery.'BrowseLayout_Vertical_OneTextVariant_ver4.0'":
         Height: =Parent.Height - BrowseGallery1_4.Y
-        Items: =Menedżer
+        Items: =If(SortDescending1,Sort(Menedżer,'imie ',Descending),(If(!SortDescending1,Sort(Menedżer,'imie ',Ascending))))
         Layout: =Layout.Vertical
         ShowScrollbar: =false
         TemplatePadding: =0
