--- a/filmoplaner_prototype/CanvasManifest.json
+++ b/filmoplaner_prototype/CanvasManifest.json
@@ -94,6 +94,7 @@
     "FileID": "f94be8ab-9254-4d13-b0f5-eca1f2ae2578",
     "Id": "f94be8ab-9254-4d13-b0f5-eca1f2ae2578",
     "InstrumentationKey": "",
+    "LocalDatabaseReferences": "{}",
     "Name": "Filmoplaner",
     "OriginatingVersion": "1.326"
   },
