--- a/filmoplaner_prototype/Src/Lokalizacje_wyswietl.fx.yaml
+++ b/filmoplaner_prototype/Src/Lokalizacje_wyswietl.fx.yaml
@@ -7,7 +7,7 @@
         ZIndex: =1
 
     "BrowseGallery1_5 As gallery.'BrowseLayout_Vertical_OneTextVariant_ver4.0'":
-        Height: =Parent.Height - BrowseGallery1_5.Y
+        Height: =489
         Items: =If(SortDescending1,Sort(Lokalizacja,Lokalizacja,Descending),(If(!SortDescending1,Sort(Lokalizacja,Lokalizacja,Ascending))))
         Layout: =Layout.Vertical
         ShowScrollbar: =false
@@ -145,4 +145,61 @@
         X: =552
         Y: =17
         ZIndex: =10
+
+    "Map1 As 'Mapa (wersja zapoznawcza)'.pcfdataset":
+        BorderColor: =RGBA(0, 18, 107, 1)
+        DisplayMode: =DisplayMode.Edit
+        Height: =472
+        Items: =Lokalizacja
+        ItemsIcons: =
+        ItemsLabels: ="Title"
+        ItemsLatitudes: ="Latitiude" 
+        ItemsLongitudes: ="Longitude"
+        PinColor: =RGBA(29, 114, 169, 1)
+        SatelliteView: =Toggle_satelite.Value
+        Width: =640
+        X: =0
+        Y: =663
+        ZIndex: =11
+
+        Lokalizacja1 As pcfDataField.textualColumn:
+            FieldDisplayName: ="Lokalizacja"
+            FieldName: ="Title"
+            FieldType: ="s"
+            FieldVariantName: ="textualColumn"
+            Order: =1
+            ZIndex: =5
+
+        Latitiude1 As pcfDataField.textualColumn:
+            FieldDisplayName: ="Latitiude"
+            FieldName: ="Latitiude"
+            FieldType: ="s"
+            FieldVariantName: ="textualColumn"
+            Order: =2
+            ZIndex: =6
+
+        Longitude1 As pcfDataField.textualColumn:
+            FieldDisplayName: ="Longitude"
+            FieldName: ="Longitude"
+            FieldType: ="s"
+            FieldVariantName: ="textualColumn"
+            Order: =3
+            ZIndex: =7
+
+        Załączniki1 As pcfDataField.textualColumn:
+            FieldDisplayName: ="Załączniki"
+            FieldName: ="{Attachments}"
+            FieldType: ="r*"
+            FieldVariantName: ="textualColumn"
+            Order: =4
+            ZIndex: =8
+
+    Toggle_satelite As toggleSwitch:
+        FalseText: ="Mapa"    
+        Height: =49
+        Size: =21
+        TrueText: ="Satelita" 
+        Width: =238
+        Y: =663
+        ZIndex: =12
 
