--- a/filmoplaner_prototype/Src/Aktorzy_wyswietl.fx.yaml
+++ b/filmoplaner_prototype/Src/Aktorzy_wyswietl.fx.yaml
@@ -8,16 +8,30 @@
 
     "BrowseGallery1_15 As gallery.'BrowseLayout_Vertical_OneTextVariant_ver4.0'":
         Height: =Parent.Height - BrowseGallery1_15.Y
-        Items: =If(SortDescending1,Sort('Aktor Filmowy','Imie ',Descending),(If(!SortDescending1,Sort('Aktor Filmowy','Imie ',Ascending))))
+        Items: =If(SortDescending1,Sort('Aktor Filmowy',Nazwisko,Descending),(If(!SortDescending1,Sort('Aktor Filmowy',Nazwisko,Ascending))))
         Layout: =Layout.Vertical
         ShowScrollbar: =false
         TemplatePadding: =0
         TemplateSize: =Min(96, Self.Height - 60)
         Width: =Parent.Width
         Y: =TextSearchBox1_15.Y + TextSearchBox1_15.Height
-        ZIndex: =2
+        ZIndex: =1
 
-        NextArrow6_8 As icon.ChevronRight:
+        Title3 As label:
+            Height: =Self.Size * 1.8
+            OnSelect: =Select(Parent)
+            PaddingBottom: =0
+            PaddingLeft: =0
+            PaddingRight: =0
+            PaddingTop: =0
+            Text: =ThisItem.'Imie '&" "&ThisItem.Nazwisko
+            VerticalAlign: =VerticalAlign.Top
+            Width: =Parent.TemplateWidth - 104
+            X: =32
+            Y: =(Parent.TemplateHeight / 2) - (Self.Height / 2)
+            ZIndex: =1
+
+        NextArrow3 As icon.ChevronRight:
             AccessibleLabel: =Self.Tooltip
             Height: =60
             Icon: =Icon.ChevronRight
@@ -33,19 +47,12 @@
             Y: =(Parent.TemplateHeight / 2) - (Self.Height / 2)
             ZIndex: =2
 
-        Separator7_15 As rectangle:
+        Separator5 As rectangle:
             Height: =1
             OnSelect: =Select(Parent)
             Width: =Parent.TemplateWidth
             Y: =Parent.TemplateHeight - 1
             ZIndex: =3
-
-        Icon4_8 As icon.Edit:
-            Icon: =Icon.Edit
-            OnSelect: =Navigate(EdytujFilm)
-            X: =504
-            Y: =14
-            ZIndex: =4
 
     LblAppName2_15 As label:
         Align: =Align.Center
