--- a/filmoplaner_prototype/Src/Role_wyswietl.fx.yaml
+++ b/filmoplaner_prototype/Src/Role_wyswietl.fx.yaml
@@ -8,7 +8,7 @@
 
     "BrowseGallery1_16 As gallery.'BrowseLayout_Vertical_OneTextVariant_ver4.0'":
         Height: =Parent.Height - BrowseGallery1_16.Y
-        Items: =If(SortDescending1,Sort(Film_1,'Nazwa (Title)',Descending),(If(!SortDescending1,Sort(Film_1,'Nazwa (Title)',Ascending))))
+        Items: =If(SortDescending1,Sort(Rola,Title,Descending),(If(!SortDescending1,Sort(Rola,Title,Ascending))))
         Layout: =Layout.Vertical
         ShowScrollbar: =false
         TemplatePadding: =0
@@ -24,7 +24,7 @@
             PaddingLeft: =0
             PaddingRight: =0
             PaddingTop: =0
-            Text: =ThisItem.'Nazwa ({Name})'
+            Text: =ThisItem.Nazwa
             VerticalAlign: =VerticalAlign.Top
             Width: =Parent.TemplateWidth - 104
             X: =32
